Made changes on the layout of elemnts, such as the sumbmit form, to stop the bleed on the visualiser

--- a/src/app/quote-form/quote-form.component.css
+++ b/src/app/quote-form/quote-form.component.css
@@ -6,3 +6,6 @@
 .alignCenter {
   text-align: center;
 }
+.noFlow {
+  overflow: auto;
+}
